# search-auto

./: .dockerignore  .gitignore  .replit  ALTERNATIVE_APIS.md  ARCHITECTURE.md  CLEANUP_SUMMARY.md  CURRENT_STATUS.md  Dockerfile  FINAL_SETUP_GUIDE.md  MARKETCHECK_INTEGRATION.md  OPTIMIZATION_SUMMARY.md  Procfile  README.md  SETUP_STRIPE.md  STRIPE_SETUP_GUIDE.md  TESTING_SUMMARY.txt  TEST_CHECKLIST.md  TEST_RESULTS.md  env.example  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.toml  replit.md  replit.nix  setup_stripe_simple.py  start-dev.sh  test_agent_queries.py  test_agent_search.py  test_comprehensive.py  test_full_flow.py  vercel.json
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt  seed_plans.py  start.sh
backend-python/: requirements.txt
backend-python/db/: models.py
backend/agents/: __init__.py  react_agent.py
backend/app/: __init__.py  main.py
backend/core/: auth.py  config.py  exceptions.py  jwt_auth.py
backend/db/: base.py  init_db.py  models.py  repositories.py
backend/integrations/: __init__.py  anthropic_client.py  apify_scraper.py  autodev_api.py  autotrader_ca.py  autotrader_scraper.py  cargurus_scraper.py  chroma_client.py  kijiji_scraper.py  marketcheck_api.py  openai_client.py  stripe_client.py  web_scraper.py
backend/modules/: __init__.py
backend/scripts/: create_stripe_products.py  create_test_user.py  setup_stripe.py
client/: index.html
client/src/: App.tsx  (+2 more)
python-backend/: pyproject.toml
server/: app.ts  index-dev.ts  routes.ts  storage.ts
shared/: schema.ts
(+56 files in other folders)
