[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.5",
    "email-validator>=2.3.0",
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "langchain>=1.0.8",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "passlib>=1.7.4",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "selectolax>=0.4.3",
    "sqlalchemy>=2.0.44",
    "stripe>=14.0.1",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
    "uvicorn>=0.38.0",
]
